# code2prompt

./: .gitignore  Cargo.toml  README.md
src/: app_controller.rs  filter.rs  git.rs  lib.rs  main.rs  path.rs  token.rs
src/common/: cache.rs  code.rs  dbg.rs  format.rs  glob.rs  hash.rs  mod.rs  path.rs
src/engine/: cache.rs  config.rs  config_file.rs  filter.rs  git.rs  mod.rs  model.rs  session.rs  token.rs  token_map.rs  traverse.rs  utils.rs
src/ui/: cache.rs  cli.rs  clipboard.rs  config.rs  mod.rs  output.rs  pane.rs  template.rs  token_map_view.rs  tree_arena.rs  tree_pane.rs  tree_view.rs  tui_select.rs
tests/: git_test.rs  integration_test.rs  main_test.rs  mod.rs  template_test.rs  test_filter.rs
tests/engine/: filter_test.rs  mod.rs
tests/ui/: mod.rs  token_map_view_test.rs  tree_arena_test.rs  tree_pane_test.rs  tui_select_test.rs
