[package]
name = "code2prompt"
version = "2.0.1-alpha.1"
authors = ["Mufeed VH <mufeed@lyminal.space>","Olivier D'Ancona <olivier.dancona@master.hes-so.ch>"]
description = "A command-line (CLI) tool to generate an LLM prompt from codebases of any size, fast."
keywords = ["code", "prompt", "llm", "gpt", "ai"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/mufeedvh/code2prompt"
documentation = "https://github.com/mufeedvh/code2prompt"
repository = "https://github.com/mufeedvh/code2prompt"
license = "MIT"
readme = "README.md"
exclude = [".github/*", ".assets/*"]
edition = "2021"

[[bin]]
name = "code2prompt"
test = false
bench = false
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
handlebars = "6.2"
jwalk = "0.8"
termtree = "0.5"
serde_json = "1.0"
indicatif = "0.17"
colored = "2.1"
tiktoken-rs = "0.6"
ignore = "0.4"
anyhow = "1.0"
inquire = "0.7"
regex = "1.11"
git2 = { version = "0.19", default-features = false, features = [ "https", "vendored-libgit2", "vendored-openssl" ] }
glob = "0.3"
once_cell = "1.20"
log = "0.4"
env_logger = "0.11"
arboard = "3.4"

[profile.release]
lto = "thin"
opt-level = 3
panic = 'abort'
codegen-units = 1

[package.metadata.deb]
section = "utility"
assets = [
    ["target/release/code2prompt", "/usr/bin/", "755"],
]

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
env_logger = "0.11"
