[package]
name = "code2prompt"
version = "3.0.2" # You can update this later
authors = ["Mufeed VH <mufeed@lyminal.space>","Olivier D'Ancona <olivier.dancona@master.hes-so.ch>"]
description = "A command-line (CLI) tool to generate an LLM prompt from codebases of any size, fast."
keywords = ["code", "prompt", "llm", "gpt", "ai"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/mufeedvh/code2prompt"
documentation = "https://github.com/mufeedvh/code2prompt"
repository = "https://github.com/mufeedvh/code2prompt"
license = "MIT"
readme = "README.md"
exclude = [".github/*", ".assets/*"]
edition = "2021" # Sticking to 2021 for now for wider compatibility

[lib]
name = "code2prompt"
path = "src/lib.rs"

[[bin]]
name = "code2prompt"
path = "src/main.rs"

[dependencies]
# Core Engine Dependencies
anyhow          = "1.0"
clap            = { version = "4.5", features = ["derive"] }
dashmap         = "6.1"
derive_builder  = "0.20.2"
glob            = "0.3"
globset         = "0.4"
handlebars      = { version = "6.2", default-features = false }
ignore          = "0.4"
log             = "0.4"
once_cell       = "1.20"
regex           = { version = "1.11", default-features = false, features = ["std", "unicode-perl"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
termtree        = "0.5"
tiktoken-rs     = "0.7.0"

# UI / Optional Dependencies
atty            = { version = "0.2", optional = true }
arboard         = { version = "3.4", default-features = false, optional = true }
colored         = { version = "2.0", optional = true } # Note: version 2 for wider compat
lscolors        = { version = "0.20", default-features = false, optional = true }
git2            = { version = "0.19", default-features = false, features = ["vendored-libgit2"], optional = true }
indicatif       = { version = "0.17.0", default-features = false, features = ["improved_unicode"], optional = true } # Note: version 0.17
inquire         = { version = "0.7", optional = true }
env_logger      = { version = "0.11", optional = true }
terminal_size   = { version = "0.3.0", optional = true } # Note: version 0.3
unicode-width   = { version = "0.2.1", optional = true } # Note: version 0.1

[features]
default = ["colors", "clipboard", "git", "interactive", "logging"]

# Granular switches for optional functionality
colors      = ["colored", "lscolors", "atty"]
clipboard   = ["arboard"]
git         = ["git2"]
interactive = ["inquire", "indicatif", "terminal_size", "unicode-width", "atty"]
logging     = ["env_logger"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2.0"
tempfile = "3.10" # Note: version 3.10

[profile.release]
lto = "thin"
opt-level = 3
panic = 'abort'
codegen-units = 1